@@ -90,4 +90,6 @@
               end) ->
         USERCODE(TV).F
   end
+#   module type X = functor (X : CORE) -> BARECODE
+# module type X = functor (_ : CORE) -> BARECODE
 # 
