@@ -341,14 +341,19 @@ let out_module_type = ref (fun _ -> failwith "Oprint.out_module_type")
 let out_sig_item = ref (fun _ -> failwith "Oprint.out_sig_item")
 let out_signature = ref (fun _ -> failwith "Oprint.out_signature")
 
-let rec print_out_module_type ppf =
+let rec print_out_functor ppf =
+  function
+    Omty_functor (_, None, mty_res) ->
+      fprintf ppf "() %a" print_out_functor mty_res
+  | Omty_functor (name , Some mty_arg, mty_res) ->
+      fprintf ppf "(%s : %a) %a" name
+        print_out_module_type mty_arg print_out_functor mty_res
+  | m -> fprintf ppf "->@ %a" print_out_module_type m
+and print_out_module_type ppf =
   function
     Omty_abstract -> ()
-  | Omty_functor (_, None, mty_res) ->
-      fprintf ppf "@[<2>functor@ () ->@ %a@]" print_out_module_type mty_res
-  | Omty_functor (name, Some mty_arg, mty_res) ->
-      fprintf ppf "@[<2>functor@ (%s : %a) ->@ %a@]" name
-        print_out_module_type mty_arg print_out_module_type mty_res
+  | Omty_functor _ as t ->
+      fprintf ppf "@[<2>functor@ %a@]" print_out_functor t
   | Omty_ident id -> fprintf ppf "%a" print_ident id
   | Omty_signature sg ->
       fprintf ppf "@[<hv 2>sig@ %a@;<1 -2>end@]" !out_signature sg
